@@ -1,8 +1,14 @@
+2008-08-28  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_style.c (murrine_set_widget_parameters),
+	(murrine_style_draw_shadow), (murrine_style_draw_box):
+	Moved some GtkEntry and GtkSpinButton workarounds
+
 2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* autogen.sh:
 	* src/config.h.in:
-	Updated autoge.sh, removed config.h.in now generated by autogen.sh
+	Updated autogen.sh, removed config.h.in now generated by autogen.sh
 	Thanks to Werner Pantke
 
 2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
